# api_calc

./: .gitignore  ABOUT_PROJECT.md  AI_ANALYSES_API_FIELDS.md  API_FIELDS.md  API_FIELDS_DOCS.md  DEPLOYMENT_GUIDE.md  Dockerfile  MIGRATE_PROJECT.md  README.md  openapi_punishment_api.json  pyproject.toml  reference_uk_2025_06_07.txt  справочник_УК_обновленный_2025_06_07_1.txt
app/: .env  __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  calculate.py  health.py  reference.py  router.py
app/core/: __init__.py  config.py  i18n.py
app/domain/: __init__.py
app/domain/engines/: __init__.py  foxpro_dates.py  foxpro_engine.py
app/domain/models/: __init__.py  calculation.py  reference.py
app/domain/services/: __init__.py  calculator.py  punishment_service.py
app/infrastructure/: __init__.py
app/infrastructure/loaders/: __init__.py  reference_loader.py  txt_reference_loader.py
app/infrastructure/repositories/: __init__.py  reference_repository.py
app/schemas/: __init__.py  models.py  request.py  response.py
app/utils/: __init__.py  converters.py
scripts/: smoke_request.sh
services/punishment_api/: README.md  __init__.py  app.py  calculator.py  foxpro_engine.py  legacy_app.py  reference_loader.py  requirements.txt  schemas.py
services/punishment_api/app/: main.py
services/punishment_api/app/core/: config.py  i18n.py  logging.py  tags.py
services/punishment_api/prompts/: PROMPTS.md
services/punishment_api/tests/: test_00_negative_scenarios.py  test_01_full_api.py  test_pipeline.py
(+20 files in other folders)
